Misc Eclipse and FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@998168 13f79535-47bb-0310-9956-ffa450edef68